--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rxfx/react": "^1.0.2",
+    "@rxfx/service": "^1.2.3",
+    "@xstate/react": "^3.2.2",
+    "chess.js": "^1.0.0-beta.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chessboard": "^4.2.3",
+    "react-dom": "^18.2.0",
+    "xstate": "^4.38.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
