--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vision-trainer",
+  "name": "rxfx-chess-vision-trainer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,18 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.1",
-    "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11",
     "@rxfx/perception": "^1.0.1",
     "@rxfx/react": "^1.0.2",
     "@rxfx/service": "^1.2.3",
     "@xstate/react": "^3.2.2",
     "chess.js": "^1.0.0-beta.6",
-    "framer-motion": "^6",
     "react": "^18.2.0",
     "react-chessboard": "^4.2.3",
     "react-dom": "^18.2.0",
+    "react-toggle-slider": "^0.4.0",
     "xstate": "^4.38.2"
   },
   "devDependencies": {
