--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^6",
     "react": "^18.2.0",
     "react-chessboard": "^4.2.3",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-table": "^7.8.0",
